[gd_scene load_steps=2 format=3 uid="uid://bwsssmcs8gnf2"]

[ext_resource type="Script" path="res://Scripts/PhoneUI.gd" id="1_qevpe"]

[node name="PhoneUI" type="CanvasLayer"]
script = ExtResource("1_qevpe")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -130.5
offset_right = 233.0
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_top = 39.0
offset_right = 467.0
offset_bottom = 100.0
alignment = 1
max_length = 9
virtual_keyboard_type = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.65
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Call"

[node name="Button2" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
text = "Close"

[node name="NumberLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -45.5
offset_right = 20.0
offset_bottom = -22.5
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="Panel/HBoxContainer/Button2" to="." method="close"]
